Column info read from comments in ASCII tables
The column information can now be read from a properly formatted comment in
an ASCII txt table file as described in the previous commit. It is the same
format that `lib/txt.c' will write a table to an ASCII table. This makes it
easy to read and write tables to and from FITS formats while preseving
information like column name, units, and etc.

Some other things that were done in this commit:

 - To make the type reading and writing easier, a new
   `gal_data_string_as_type' was defined in `data.c' to read a string and
   specify the type it refers to. The old `gal_data_type_string' was also
   renamed to `gal_data_type_as_string' since it does the opposite.

 - The `gal_data_copy_to_new_type' is now in `data.c' and the old
   `data-copy.[ch]' files were removed.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -42,7 +42,7 @@ libgnuastro_la_LDFLAGS = -version-info $(GAL_LT_VERSION)
 # Specify the library .c files
 libgnuastro_la_SOURCES = arithmetic.c arithmetic-binary.c               \
   arithmetic-onlyint.c array.c box.c checkset.c configfiles.c data.c    \
-  data-copy.c fits.c git.c linkedlist.c mesh.c mode.c polygon.c qsort.c \
+  fits.c git.c linkedlist.c mesh.c mode.c polygon.c qsort.c             \
   spatialconvolve.c statistics.c table.c threads.c timing.c txt.c wcs.c
 
 
@@ -71,9 +71,9 @@ pkginclude_HEADERS = gnuastro/config.h $(headersdir)/arithmetic.h       \
 # will not distributed, so we need to explicitly tell Automake to
 # distribute them here.
 EXTRA_DIST = gnuastro.pc.in arithmetic-binary.h	arithmetic-onlyint.h    \
-  arithmetic-other.h data-copy.h config.h.in checkset.h commonargs.h    \
-  commonparams.h configfiles.h fixedstringmacros.h mode.h neighbors.h   \
-  timing.h $(headersdir)/README
+  arithmetic-other.h config.h.in checkset.h commonargs.h commonparams.h \
+  configfiles.h fixedstringmacros.h mode.h neighbors.h timing.h         \
+  $(headersdir)/README
 
 
 
