FITS ascii and binary table I/O done with tests
The FITS standard doesn't have any code to store `signed char', `unsigned
short', or `unsigned int' types. So they suggest using special values for
the `TSCALn' (to scale a column values) and `TZEROn' (to shift the column
values) keywords to let CFITSIO know that we are dealing with one of these
types instead of their unsigned/signed counterparts.

While CFITSIO does do this internally, we also need to do this outside
CFITSIO because the space/type to keep the values must already be
allocated/known. So `gal_fits_table_info' now reads the `TZEROn' and
`TSCALn' keywords also and the new function
`fits_correct_bin_table_int_types' is in charge of checking these two
values and correcting the type if it is necessary. With this correction
(and those in the last commit), the example table in
`tests/table/table.txt' which contains all types and blank values and etc
can now be read as an ASCII or binary FITS file and converted back into a
plain text file.

The test table was also corrected to be usable with the default values as
discussed in the comments above the table. Also, two tests were added to
first read this table as an ASCII FITS table, then convert that back to a
plain text table (two similar tests with Binary FITS tables alreay
existed). All four of these tests now pass (on my system at least).

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -65,21 +65,22 @@ multithread_SOURCES = lib/multithread.c
 
 
 # The actual test scripts that are run:
-TESTS = $(check_PROGRAMS) prepconf.sh mkprof/mosaic1.sh mkprof/mosaic2.sh    \
-  mkprof/mosaic3.sh mkprof/mosaic4.sh mkprof/radeccat.sh imgcrop/imgcat.sh   \
-  imgcrop/wcscat.sh imgcrop/xcyc.sh imgcrop/xcycnoblank.sh                   \
-  imgcrop/section.sh imgcrop/radec.sh imgcrop/imgpolygon.sh                  \
-  imgcrop/imgoutpolygon.sh imgcrop/wcspolygon.sh convertt/fitstotxt.sh       \
-  convertt/fitstojpeg.sh convertt/blankch.sh convertt/jpegtotxt.sh           \
-  convertt/fitstojpegcmyk.sh convertt/jpegtofits.sh convertt/fitstopdf.sh    \
-  convolve/spatial.sh convolve/frequency.sh imgwarp/imgwarp_scale.sh         \
-  imgwarp/homographic.sh mknoise/addnoise.sh mkprof/ellipticalmasks.sh       \
-  mkprof/inputascanvas.sh header/write.sh header/print.sh header/update.sh   \
-  header/delete.sh imgstat/basicstats.sh subtractsky/subtractsky.sh          \
-  noisechisel/noisechisel.sh mkcatalog/simple.sh mkcatalog/aperturephot.sh   \
-  arithmetic/snimage.sh arithmetic/onlynumbers.sh arithmetic/where.sh        \
-  arithmetic/or.sh cosmiccal/simpletest.sh table/txt-to-fits-binary.sh       \
-  table/fits-binary-to-txt.sh
+TESTS = $(check_PROGRAMS) prepconf.sh mkprof/mosaic1.sh mkprof/mosaic2.sh  \
+  mkprof/mosaic3.sh mkprof/mosaic4.sh mkprof/radeccat.sh imgcrop/imgcat.sh \
+  imgcrop/wcscat.sh imgcrop/xcyc.sh imgcrop/xcycnoblank.sh                 \
+  imgcrop/section.sh imgcrop/radec.sh imgcrop/imgpolygon.sh                \
+  imgcrop/imgoutpolygon.sh imgcrop/wcspolygon.sh convertt/fitstotxt.sh     \
+  convertt/fitstojpeg.sh convertt/blankch.sh convertt/jpegtotxt.sh         \
+  convertt/fitstojpegcmyk.sh convertt/jpegtofits.sh convertt/fitstopdf.sh  \
+  convolve/spatial.sh convolve/frequency.sh imgwarp/imgwarp_scale.sh       \
+  imgwarp/homographic.sh mknoise/addnoise.sh mkprof/ellipticalmasks.sh     \
+  mkprof/inputascanvas.sh header/write.sh header/print.sh header/update.sh \
+  header/delete.sh imgstat/basicstats.sh subtractsky/subtractsky.sh        \
+  noisechisel/noisechisel.sh mkcatalog/simple.sh mkcatalog/aperturephot.sh \
+  arithmetic/snimage.sh arithmetic/onlynumbers.sh arithmetic/where.sh      \
+  arithmetic/or.sh cosmiccal/simpletest.sh table/txt-to-fits-binary.sh     \
+  table/fits-binary-to-txt.sh table/txt-to-fits-ascii.sh                   \
+  table/fits-ascii-to-txt.sh
 
 
 
@@ -130,6 +131,8 @@ mkprof/mosaic4.sh: prepconf.sh.log
 mkprof/radeccat.sh: prepconf.sh.log
 table/txt-to-fits-binary.sh: prepconf.sh.log
 table/fits-binary-to-txt.sh: table/txt-to-fits-binary.sh.log
+table/txt-to-fits-ascii.sh: prepconf.sh.log
+table/fits-ascii-to-txt.sh: table/txt-to-fits-ascii.sh.log
 imgcrop/imgcat.sh: mkprof/mosaic1.sh.log
 imgcrop/wcscat.sh: mkprof/mosaic1.sh.log mkprof/mosaic2.sh.log     \
                    mkprof/mosaic3.sh.log mkprof/mosaic4.sh.log
