New elements for argp_option for new option management
This is the first commit for task #14300 ("Option management using new root
data structure."). The main purpose was to make it simple to read the
options and their values from the command-line and configuration files. The
way the system works now is to use `argp' for command-line options, and 3
functions in each program's `ui.c' to read the command-line. These three
functions are very repetative, and we have to keep the string value of each
option twice. This is hard to maintain and buggy.

To do this, in `bootstrap.conf', we add the two elements `value' and `type'
to the definition of the argp_option' in the bootstrapped `argp.h'. Through
`config.h', Gnulib gives its own headers higher precedence, so we can
ignore the (possibly existing) `argp.h' in the user's own system and use
these new elements. Also, the definition of `argp_option' is no longer
static, so we can pass its pointer to the libraries.

From the new data structure, we just needed the type macros, not a full
`gal_data_t'. Also, a new type was added for string linked lists, mainly
for this task (reading options), but later it can be useful to generally
define linked list types too and unify all the linked list functions in
`linkedlist.h' into one.

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -97,7 +97,6 @@ gnulib_name="libgnu"
 # Processes to run after gnulib-tool and before autoreconf.
 bootstrap_post_import_hook()
 {
-
   # List of m4 files we need from the GNU Autoconf Archives (excluding the
   # `ax_' prefix and `.m4' suffix):
   neededm4s="pthread compare_version"
@@ -126,6 +125,33 @@ bootstrap_post_import_hook()
         "http://git.savannah.gnu.org/gitweb/?p=autoconf-archive.git;a=blob_plain;f=m4/ax_$m4name.m4" || die "Failed to download ax_$m4name.m4!"
     done
   fi
+
+  # Add a value pointer to `argp_option' for easy setting of option values.
+  awk '{                                            \
+         if($1=="struct" && $2=="argp_option")      \
+           inargp=1;                                \
+                                                    \
+         if(inargp==0)                              \
+           print;                                   \
+         else if($1=="};")                          \
+           {                                        \
+             printf "\n";                           \
+             print "  /* Pointer to value.";        \
+             print "     IMPORTANT: currently ONLY a Gnuastro addition. */"; \
+             print "  void *value;";                \
+                                                    \
+             printf "\n";                           \
+             print "  /* Type of value (see lib/gnuastro/data.h)."; \
+             print "     IMPORTANT: currently ONLY a Gnuastro addition. */"; \
+             print "  int type;";                   \
+                                                    \
+             print;                                 \
+             inargp=0;                              \
+          }                                         \
+         else                                       \
+          print;                                    \
+       }' bootstrapped/lib/argp.h > argp_tmp.h
+  mv argp_tmp.h bootstrapped/lib/argp.h
 }
 
 
