Option values stored in argp_option
This commit is part of work on task #14300 ("Option management using new
root data structure.", as in the previous commit), the option values are
now read into the proper `argp_option' structure with the proper type. To
do this several major changes were necessary:

 - The `/' infront of `USERCONFIG_DIR' was removed in `configure.ac' so it
   is added manually during the program.

 - In `data.c' the type information functions were moved to the start of
   the file to match the same order in `data.h' (which is more natural).

 - The new function `gal_data_string_to_type' was added to read a given
   string into a given type. This is used in option parsing as well as
   `gal_table_read_blank'. So the latter was also modified to allow this
   change.

 - The new function `gal_data_is_linked_list' was also added to allow easy
   checking if the type of the data structure is linked list or not. For
   now there is only one linked list type, but soon it will expand and this
   will be more meaningfull.

 - The two old `commonargs.h' and `commonparams.h' were removed. The common
   parameters structure is now placed with the other option specific
   definitions in `options.h' and `commonargs.h' is now effectively moved
   to the `commonopts.h' header. The commonopts header must be included by
   only one `.c' file in each program (its `ui.c'), since it includes the
   definition of the common options array. An `extern' version of it is
   also declared in `options.h' so everyone can use it.

 - The old `configfiles.[ch]' files are now also removed since they are
   being replaced by the `options.[ch]' files.

 - A fixed `GAL_OPTIONS_NO_ARG_TYPE' was defined to allow easy/un-buggy
   definition of options that don't accept any values.

 - Thanks to the new elements in `argp_option', the switch structure to
   check for key values is no longer necessary in the `parse_opt' (in
   `args.h') function of each program and the function that woul

--- a/configure.ac
+++ b/configure.ac
@@ -250,7 +250,7 @@ AM_CONDITIONAL([COND_GNULIBCHECK], [test $enable_gnulibcheck = yes])
 AC_DEFINE_UNQUOTED([CONF_POSTFIX], [".conf"], [Configuration file post fix.])
 AC_DEFINE_UNQUOTED([CURDIRCONFIG_DIR], [".AC_PACKAGE_TARNAME/"],
                    [Local data dir.])
-AC_DEFINE_UNQUOTED([USERCONFIG_DIR], ["/.local/etc/"],
+AC_DEFINE_UNQUOTED([USERCONFIG_DIR], [".local/etc/"],
                    [User data dir.])
 AC_DEFINE_UNQUOTED([CONF_SHOWFMT], [" %-20s"],
                    [Configuration file name format.])
