--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -147,7 +147,7 @@ endif
 # it. Unfortunately as far as I know, pattern rules are not portable in all
 # implementations of Make, so we have to list all the utilities manually.
 toputildir=$(top_builddir)/bin
-ALLMANSDEP = $(top_srcdir)/lib/commonargs.h
+ALLMANSDEP = $(top_srcdir)/lib/commonopts.h
 man/astarithmetic.1: $(top_srcdir)/bin/arithmetic/args.h  $(ALLMANSDEP)
 	$(MAYBE_HELP2MAN) -n "arithmetic operations on images and numbers" \
 	                  --libtool $(toputildir)/arithmetic/astarithmetic
