--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -41,9 +41,11 @@ libgnuastro_la_LDFLAGS = -version-info $(GAL_LT_VERSION)
 
 # Specify the library .c files
 libgnuastro_la_SOURCES = arithmetic.c arithmetic-binary.c               \
-  arithmetic-onlyint.c array.c box.c checkset.c configfiles.c data.c    \
-  fits.c git.c linkedlist.c mesh.c mode.c polygon.c qsort.c             \
+  arithmetic-onlyint.c array.c box.c checkset.c data.c fits.c git.c     \
+  linkedlist.c mesh.c mode.c options.c polygon.c qsort.c                \
   spatialconvolve.c statistics.c table.c threads.c timing.c txt.c wcs.c
+
+
 
 
 
@@ -70,10 +72,9 @@ pkginclude_HEADERS = gnuastro/config.h $(headersdir)/arithmetic.h       \
 # and if they are not explicitly mentioned somewhere in the Makefile, they
 # will not distributed, so we need to explicitly tell Automake to
 # distribute them here.
-EXTRA_DIST = gnuastro.pc.in arithmetic-binary.h	arithmetic-onlyint.h    \
-  arithmetic-other.h config.h.in checkset.h commonargs.h commonparams.h \
-  configfiles.h fixedstringmacros.h mode.h neighbors.h timing.h         \
-  $(headersdir)/README
+EXTRA_DIST = $(headersdir)/README gnuastro.pc.in arithmetic-binary.h    \
+  arithmetic-onlyint.h arithmetic-other.h config.h.in checkset.h        \
+  fixedstringmacros.h mode.h neighbors.h options.h timing.h
 
 
 
