Starting to use gal_data_t in MakeProfiles
Work has started on porting the root data structure (`gal_data_t') into
MakeProfiles. It currently compiles and just starts to parse the options,
so it is not yet complete, never the less, the changes have been
substantial enough to commit before further progress.

These are the list of things done so far:

 - Until now, `gal_data_free' would take two arguments to either free the
   contents of the structure and/or the main structure its self. But the
   value to the second option was confusing. So now, it only takes one
   argument and frees the structure and its contents. There is a new
   function (`gal_data_free_contents') dedicated to freeing the contents of
   the structure and not the structure its self.

 - `gal_fits_write_img' uses the `name', `unit' and `comment' field of the
   data structure to set the FITS file's `EXTNAME', `BUNIT', and `COMMENT'
   (at the top) keywords. So there is no longer any need for the `extname'
   argument.

 - In MakeProfiles, the user interface variables are now fully defined in
   the main program structure. With the removal of the `*set' variables,
   the `uiparams' structure is mostly irrelevant and just a source of
   confusion, so it was removed.

 - The checking of variable ranges will now be done as part of the option
   parsing, so in `bootstrap.conf', a new `range' field is added to
   `argp_option' to allow this checking during the parsing and further
   simplify each program's design.

 - With the option range checks that are going to be done during option
   parsing, there is no more need for the numerous `gal_checkset_*'
   functions related to numerical range checking. So they have been
   removed.

 - The programs dealing with data structures didn't care about
   dimensionality until now, so I hadn't noticed that the FITS
   reading/writing functions were actually reading the dimentionality in
   the FITS/Fortran format (row first), not in the C format (column
   first

--- a/bin/arithmetic/Makefile.am
+++ b/bin/arithmetic/Makefile.am
@@ -28,7 +28,7 @@ AM_CPPFLAGS = -I\$(top_srcdir)/bootstrapped/lib
 ## Utility and its sources
 bin_PROGRAMS = astarithmetic
 
-astarithmetic_SOURCES = main.c main.h cite.h ui.c ui.h args.h	\
+astarithmetic_SOURCES = main.c main.h authors-cite.h ui.c ui.h args.h	\
 arithmetic.c arithmetic.h operands.c operands.h
 
 astarithmetic_LDADD = $(top_builddir)/bootstrapped/lib/libgnu.la	\
