--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -141,9 +141,14 @@ bootstrap_post_import_hook()
              print "  void *value;";                \
                                                     \
              printf "\n";                           \
-             print "  /* Type of value (see lib/gnuastro/data.h)."; \
+             print "  /* Type of value (see lib/gnuastro/data.h).";          \
              print "     IMPORTANT: currently ONLY a Gnuastro addition. */"; \
              print "  int type;";                   \
+                                                    \
+             printf "\n";                           \
+             print "  /* Acceptable range of value (see lib/options.h).";    \
+             print "     IMPORTANT: currently ONLY a Gnuastro addition. */"; \
+             print "  int range;";                  \
                                                     \
              print;                                 \
              inargp=0;                              \
