Numeric option sanity checks
MakeProfiles is being ported to the new option management system and
`gal_data_t'. After Arithmetic and Table, it is the first program that
deals with a lot of options of various types (especially numeric
options). Hence, several changes were necessary in the infra-structure to
make it more generic and accommodate all these options and values. So the
changes are relatively diverse as described below:

 - Until now, Gnulib's `num_processors' function would be called
   individually in each program, forcing us to include the `nproc.h' header
   in each program's `ui.c'. This could be confusing for users who want to
   read the programs and also for developers. Since this header is not
   available on any system (its only part of Gnulib). So, the new
   `gal_options_initialize_numthreads' was defined to call this function in
   the options library and make things more clear in the code of each
   program.

 - In order to call Gnulib's `num_processors' function within the library,
   it was necessary to link Gnuastro's library with Gnulib. This removed
   the need for all the programs to link with Gnulib separately and the
   great features of Gnulib can now also be used by the library
   users. Although the headers are not available, but we can write wrappers
   for them if necessary later.

 - Since the long linking line to Gnulib was removed in each program's
   `Makefile.am', all the program `Makefile.am's were also reviewed and
   re-ordered to be more clear and easily readable. In particular, the
   headers (`.h') are now separated from the program sources (`.c' files)
   through automake's `EXTRA_DIST' variable, as in the libraries.

 - The option values are now checked to fit into the desired range
   immediately when read with the new `options_sanity_check' function.
   This mandated the addition of a new field in the `argp_option' structure
   called `range' and a new enumerator type in `option.h' to define
   specific ranges to ch

--- a/bin/TEMPLATE/Makefile.am
+++ b/bin/TEMPLATE/Makefile.am
@@ -25,16 +25,16 @@
 AM_CPPFLAGS = -I\$(top_srcdir)/bootstrapped/lib
 
 
-## Utility and its sources
+## Program definition (name, linking, sources and headers)
 bin_PROGRAMS = astTEMPLATE
 
-astTEMPLATE_SOURCES = main.c main.h cite.h ui.c ui.h args.h	\
-TEMPLATE.c TEMPLATE.h
+astTEMPLATE_LDADD = -lgnuastro
 
-astTEMPLATE_LDADD = $(top_builddir)/bootstrapped/lib/libgnu.la		\
--lgnuastro
+astTEMPLATE_SOURCES = main.c ui.c TEMPLATE.c
+
+EXTRA_DIST = main.h authors-cite.h args.h ui.h TEMPLATE.h
 
 
 ## The configuration file (distribute and install).
 ## NOTE: the man page is created in doc/Makefile.am
-dist_sysconf_DATA = asttable.conf
+dist_sysconf_DATA = astTEMPLATE.conf
