--- a/bin/mkprof/astmkprof.conf
+++ b/bin/mkprof/astmkprof.conf
@@ -17,9 +17,6 @@
 # notice and this notice are preserved.  This file is offered as-is,
 # without any warranty.
 
-# Input:
- hdu                   0
-
 # Output:
  naxis1             1000
  naxis2             1000
@@ -53,3 +50,6 @@
  crval1                1
  crval2                1
  resolution         0.03
+
+# Common options
+ hdu                   0
