--- a/bin/header/Makefile.am
+++ b/bin/header/Makefile.am
@@ -25,14 +25,14 @@
 AM_CPPFLAGS = -I\$(top_srcdir)/bootstrapped/lib
 
 
-## Utility and its sources
+## Program definition (name, linking, sources and headers)
 bin_PROGRAMS = astheader
 
-astheader_SOURCES = main.c main.h cite.h ui.c ui.h args.h	\
-header.c header.h
+astheader_LDADD = -lgnuastro
 
-astheader_LDADD = $(top_builddir)/bootstrapped/lib/libgnu.la		\
--lgnuastro
+astheader_SOURCES = main.c ui.c header.c
+
+EXTRA_DIST = main.h authors-cite.h args.h ui.h header.h
 
 
 ## The configuration file (distribute and install).
