--- a/bin/imgcrop/Makefile.am
+++ b/bin/imgcrop/Makefile.am
@@ -25,14 +25,14 @@
 AM_CPPFLAGS = -I\$(top_srcdir)/bootstrapped/lib
 
 
-## Utility and its sources
+## Program definition (name, linking, sources and headers)
 bin_PROGRAMS = astimgcrop
 
-astimgcrop_SOURCES = main.c main.h cite.h ui.c ui.h args.h imgcrop.c	\
-imgcrop.h wcsmode.c wcsmode.h crop.c crop.h
+astimgcrop_LDADD = -lgnuastro
 
-astimgcrop_LDADD = $(top_builddir)/bootstrapped/lib/libgnu.la	\
--lgnuastro
+astimgcrop_SOURCES = main.c ui.c imgcrop.c wcsmode.c crop.c
+
+EXTRA_DIST = main.h authors-cite.h args.h ui.h imgcrop.h wcsmode.h crop.h
 
 
 ## The configuration file (distribute and install).
