--- a/bin/mknoise/Makefile.am
+++ b/bin/mknoise/Makefile.am
@@ -25,14 +25,15 @@
 AM_CPPFLAGS = -I\$(top_srcdir)/bootstrapped/lib
 
 
-## Utility and its sources
+## Program definition (name, linking, sources and headers)
 bin_PROGRAMS = astmknoise
 
-astmknoise_SOURCES = main.c main.h cite.h ui.c ui.h args.h	\
-mknoise.c mknoise.h
+astmknoise_LDADD = -lgnuastro
 
-astmknoise_LDADD = $(top_builddir)/bootstrapped/lib/libgnu.la		\
--lgnuastro
+astmknoise_SOURCES = main.c ui.c mknoise.c
+
+EXTRA_DIST = main.h authors-cite.h args.h ui.h mknoise.h
+
 
 
 ## The configuration file (distribute and install).
