--- a/bin/subtractsky/Makefile.am
+++ b/bin/subtractsky/Makefile.am
@@ -25,14 +25,14 @@
 AM_CPPFLAGS = -I\$(top_srcdir)/bootstrapped/lib
 
 
-## Utility and its sources
+## Program definition (name, linking, sources and headers)
 bin_PROGRAMS = astsubtractsky
 
-astsubtractsky_SOURCES = main.c main.h cite.h ui.c ui.h args.h	\
-subtractsky.c subtractsky.h
+astsubtractsky_LDADD = -lgnuastro
 
-astsubtractsky_LDADD = $(top_builddir)/bootstrapped/lib/libgnu.la	\
--lgnuastro
+astsubtractsky_SOURCES = main.c ui.c subtractsky.c
+
+EXTRA_DIST = main.h authors-cite.h args.h ui.h subtractsky.h
 
 
 ## The configuration file (distribute and install).
