--- a/bin/table/Makefile.am
+++ b/bin/table/Makefile.am
@@ -25,14 +25,14 @@
 AM_CPPFLAGS = -I\$(top_srcdir)/bootstrapped/lib
 
 
-## Utility and its sources
+## Program definition (name, linking, sources and headers)
 bin_PROGRAMS = asttable
 
-asttable_SOURCES = main.c main.h authors-cite.h ui.c ui.h args.h	\
-table.c table.h
+asttable_LDADD = -lgnuastro
 
-asttable_LDADD = $(top_builddir)/bootstrapped/lib/libgnu.la             \
--lgnuastro
+asttable_SOURCES = main.c ui.c table.c
+
+EXTRA_DIST = main.h authors-cite.h args.h ui.h table.h
 
 
 ## The configuration file (distribute and install).
